Pixels sprite. Fix messagebox overflow on small screens.

--- a/app/assets/stylesheets/bootstrap.css.less
+++ b/app/assets/stylesheets/bootstrap.css.less
@@ -43,21 +43,6 @@
   background: none;
 }
 
-.btn-large [class^="smilies-"] {
-  margin-top: 1px;
-}
-
-[class^="smilies-"],
-[class*=" smilies-"] {
-  vertical-align: middle;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  vertical-align: text-top;
-  background-repeat: no-repeat;
-}
-
 .form-horizontal {
   .control-label {
     width: 160px;
